--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "express": "^4.17.1",
+    "friendly-words": "^1.1.10",
     "socket.io": "^2.3.0"
   },
   "engines": {
